# PathTracer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: release.yml
dep/sgl/: CMakeLists.txt  Makefile
dep/sgl/src/: sgl_quit.c
docs/: adding-figures.md  adding-shapes.md  architecture.md  graphics-pipeline.md
include/: rt.h
legacy/: Makefile
legacy/dep/sgl/: CMakeLists.txt
legacy/dep/sgl/include/: sgl.h
legacy/dep/sgl/src/: sgl_draw_controls.c  sgl_handle_controls.c
legacy/resources/scenes/: convert_scenes.py
legacy/src/: main.c  movement.c  obj_info.c  obj_parser_4.c  scene_3.c  scene_4.c
legacy/src/design/: design_10.c  design_11.c  design_12.c  design_14.c  design_15.c  design_17.c  design_18.c  design_19.c  design_2.c  design_5.c  design_8.c
resources/kernels/: mebius.cl  render.cl
resources/scenes/: aelita.yaml  all.yaml  box.yaml  car.yaml  cornell_box.json  cornell_box.yaml  cube.yaml  dead_tree.yaml  demo.json  demo.yaml  disc.yaml  earth.yaml  ellipsoid.yaml  fractals.json  fractals.yaml  hyperboloid.yaml  iron_man.yaml  julia.yaml  man.yaml  mandelbulb.yaml  mebius.yaml  mill.yaml  night.yaml  paraboloid.yaml  planet.yaml  playground.yaml  pyramid.yaml  rings.yaml  teapot.yaml  test.yaml  tetrahedron.yaml  torus.yaml  unit_logo.yaml
src/: app.rs  constants.rs  main.c  main.rs  picking.rs  render.c  scene_1.c  scene_2.c  utils_3.c
src/accel/: aabb.rs  bvh.rs  mod.rs
src/app/: interaction.rs  rendering.rs  scene_ops.rs  state.rs
src/camera/: camera.rs  controller.rs  mod.rs
src/design/: design_13.c  design_20.c  design_3.c  design_4.c  design_6.c  design_7.c  design_9.c
src/gpu/: buffers.rs  context.rs  mod.rs  pipeline.rs
src/input/: handler.rs  mod.rs
src/io/: mod.rs  screenshot.rs  texture_atlas.rs
src/model/: mod.rs  obj_loader.rs
src/render/: accumulator.rs  frame.rs  mod.rs  post_process.rs
src/scene/: exporter.rs  figure.rs  loader.rs  material.rs  mod.rs  scene.rs  shape.rs
src/shaders/: composer.rs  mod.rs
src/shaders/wgsl/: blit.wgsl  bvh.wgsl  camera.wgsl  lighting.wgsl  materials.wgsl  mis.wgsl  path_trace.wgsl  post_process.wgsl  random.wgsl  textures.wgsl  tonemap.wgsl  types.wgsl  utils.wgsl
src/shaders/wgsl/figures/: cone.wgsl  cube.wgsl  cylinder.wgsl  disc.wgsl  dispatch.wgsl  ellipsoid.wgsl  hyperboloid.wgsl  julia.wgsl  mandelbulb.wgsl  mebius.wgsl  paraboloid.wgsl  plane.wgsl  pyramid.wgsl  skybox.wgsl  sphere.wgsl  tetrahedron.wgsl  torus.wgsl  triangle.wgsl
src/ui/: mod.rs  object_editor.rs  toolbar.rs
